Только РДУ доделать

--- a/CulnryBookUP/appsettings.json
+++ b/CulnryBookUP/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ALENA\\SQLEXPRESS;Initial Catalog=CulinaryBook;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CulinaryBook;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
